# advanced-fprintf

./: .gitignore  CMakeLists.txt  Makefile  README.md  example.c
afprintf/: afprintf.c  afprintf.h
test/: test.cpp
